# bad-boids

./: .flake8  .pre-commit-config.yaml  README.md  animate_boids.py  boids.py  fixture.yml  pyproject.toml  record_fixture.py  requirements.txt  test_boids.py  view_boids.py
.github/: main.yml
.github/workflows/: main.yml
boids/: __init__.py  view.py
tests/: test_boids.py
